--- a/src/components/hero/components/hero-type-3/hero-type-3.module.scss
+++ b/src/components/hero/components/hero-type-3/hero-type-3.module.scss
@@ -1,3 +1,9 @@
+.section {
+  max-width: 1620px;
+  padding: 0 10px;
+  margin: 0 auto;
+}
+
 .root {
   background-repeat: no-repeat;
   background-size: cover;
