--- a/src/components/footer/components/footer-type-7/footer-type-7.module.scss
+++ b/src/components/footer/components/footer-type-7/footer-type-7.module.scss
@@ -7,8 +7,18 @@
 
   a {
     color: var(--white);
+
+    transition: opacity 0.3s ease;
+
+    &:hover {
+      opacity: 0.8;
+    }
   }
   span {
+    color: var(--white);
+  }
+
+  li {
     color: var(--white);
   }
 }
