--- a/src/shared/components/filter-popup/filter-popup.module.scss
+++ b/src/shared/components/filter-popup/filter-popup.module.scss
@@ -7,65 +7,96 @@
   left: 0;
   width: 100%;
   height: 100%;
-  backdrop-filter: blur(8px);
-  background: rgba(0, 0, 0, 0.36);
+  background-color: #fff;
   z-index: 999;
+  overflow-x: scroll;
 }
 
-.modal {
-  position: fixed;
-  right: 0px;
-  top: 0px;
+.header {
+  width: 100%;
+  padding-inline: 16px;
+
+  &_wrapper {
+    display: flex;
+    align-items: center;
+    padding-block: 16px;
+    justify-content: space-between;
+    border-bottom: 1px solid #d1d5db;
+  }
+
+  span {
+    font-size: 24px;
+    font-weight: 700;
+    color: var(--primary);
+  }
+
+  button {
+    box-shadow: none;
+    border: none;
+    background: transparent;
+    cursor: pointer;
+
+    svg {
+      transition: opacity 0.3s ease;
+      &:hover {
+        opacity: 0.8;
+      }
+    }
+  }
+}
+
+.list {
   display: flex;
   flex-direction: column;
-  z-index: 9999;
-  padding: var(--fs-sm);
-  height: fit-content;
+  padding-inline: var(--gap-sm);
+}
+
+.block {
+  display: flex;
+  flex-direction: column;
+  gap: var(--gap-sm);
+  padding-block: 16px;
+  border-bottom: 1px solid rgb(209, 213, 219);
+
+  &:not(:last-child) {
+    padding-right: 0;
+  }
+
+  .content {
+    display: none;
+
+    & > div {
+      flex: 1;
+    }
+  }
+}
+
+.title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  cursor: pointer;
+
+  svg {
+    width: 40px;
+  }
+}
+
+.button {
+  height: 48px;
+  border-radius: 10px;
+  width: 150px;
+  border-radius: 0;
   width: 100%;
-  max-width: 370px;
-  overflow-y: auto;
-  background: #ffffff;
+  margin-top: 16px;
+}
 
-  &_header {
-    @extend %flex-align;
-    width: 100%;
-    margin-bottom: var(--fs-sm);
-
-    span {
-      font-weight: var(--fw-b);
-      font-size: var(--fs-lg);
-      color: var(--primary);
-    }
-
-    button {
-      border: none;
-      margin-left: auto;
-    }
+.active {
+  & ~ .content {
+    display: flex;
   }
 
-  &_list {
-    @extend %flex-column;
-
-    input {
-      width: 100%;
-      padding: 16px 0;
-      border-top: 1px solid #d1d5db;
-    }
-
-    button {
-      margin: var(--fs-sm) 0;
-      width: 100%;
-    }
+  svg {
+    transform: rotate(180deg);
   }
-}
-
-.outlined {
-  background-color: transparent;
-  padding: 4px 0;
-}
-.color_primary {
-  color: var(--primary);
-}
-.color_muted {
-  color: var(--gray);
 }
