--- a/src/shared/components/top-menu/top-menu.module.scss
+++ b/src/shared/components/top-menu/top-menu.module.scss
@@ -5,7 +5,7 @@
   @extend %flex-wrap;
   gap: var(--gap-xxl);
   flex-grow: 1;
-  max-width: 700px;
+  // max-width: 700px;
 
   &_nav {
     @extend %flex-column;
