--- a/src/components/hero/components/hero-type-1/hero-type-1.module.scss
+++ b/src/components/hero/components/hero-type-1/hero-type-1.module.scss
@@ -128,6 +128,14 @@
   }
 }
 
+.multi_input {
+  border-radius: 10px;
+}
+
+.dropdown {
+  border-radius: 5px !important;
+}
+
 @media (max-width: 1190px) {
   .tab {
     &_content {
