--- a/src/components/hero/components/hero-type-5/hero-type-5.module.scss
+++ b/src/components/hero/components/hero-type-5/hero-type-5.module.scss
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  border-radius: 20px;
+  border-radius: 5px;
   position: relative;
 
   &::after {
@@ -17,7 +17,7 @@
     bottom: 0;
     content: '';
     background: rgba(0, 0, 0, 0.2);
-    border-radius: 20px;
+    border-radius: 5px;
   }
 }
 
@@ -63,7 +63,7 @@
       background-color: #fff;
       cursor: pointer;
       padding: 16px 24px;
-      border-radius: 8px;
+      border-radius: 5px;
       color: var(--gray);
       font-size: var(--fs-sm);
       flex: 1;
@@ -106,6 +106,10 @@
       gap: var(--gap-sm);
     }
   }
+}
+
+.multi_input {
+  border-radius: 5px;
 }
 
 .button {
