--- a/src/components/hero/components/hero-type-6/hero-type-6.module.scss
+++ b/src/components/hero/components/hero-type-6/hero-type-6.module.scss
@@ -63,7 +63,7 @@
       background-color: #fff;
       cursor: pointer;
       padding: 16px 24px;
-      border-radius: 8px;
+      border-radius: 5px;
       color: var(--gray);
       font-size: var(--fs-sm);
       flex: 1;
@@ -125,6 +125,10 @@
       }
     }
   }
+}
+
+.multi_input {
+  border-radius: 5px;
 }
 
 @media (max-width: 1190px) {
