--- a/src/components/blog-detail/components/blog-detail-type-1/blog-detail-type-1.module.scss
+++ b/src/components/blog-detail/components/blog-detail-type-1/blog-detail-type-1.module.scss
@@ -8,6 +8,12 @@
     margin-bottom: var(--gap-xs);
     color: var(--gray);
   }
+
+  &_content {
+    img {
+      border-radius: 20px;
+    }
+  }
 }
 
 .base_title {
