--- a/src/components/footer/components/footer-type-1/footer-type-1.module.scss
+++ b/src/components/footer/components/footer-type-1/footer-type-1.module.scss
@@ -20,13 +20,16 @@
 }
 
 .main_menu {
-  nav span,
   ul li a {
     color: var(--white);
-    transition: opacity 0.3s ease;
+    transition:
+      opacity 0.3s ease,
+      border-color 0.3s ease;
+    border-bottom: 1px solid transparent;
 
     &:hover {
       opacity: 0.8;
+      border-color: var(--white);
     }
   }
 }
