--- a/src/components/footer/components/footer-type-2/footer-type-2.module.scss
+++ b/src/components/footer/components/footer-type-2/footer-type-2.module.scss
@@ -105,14 +105,17 @@
 }
 
 .main_menu {
-  nav span,
   ul li a {
     color: var(--dark);
 
-    transition: opacity 0.3s ease;
+    transition:
+      opacity 0.3s ease,
+      border-color 0.3s ease;
+    border-bottom: 1px solid transparent;
 
     &:hover {
       opacity: 0.8;
+      border-color: var(--dark);
     }
   }
 }
