--- a/src/components/footer/components/footer-type-3/footer-type-3.module.scss
+++ b/src/components/footer/components/footer-type-3/footer-type-3.module.scss
@@ -17,6 +17,22 @@
   }
 }
 
+.main_menu {
+  ul li a {
+    color: var(--dark);
+
+    transition:
+      opacity 0.3s ease,
+      border-color 0.3s ease;
+    border-bottom: 1px solid transparent;
+
+    &:hover {
+      opacity: 0.8;
+      border-color: var(--dark);
+    }
+  }
+}
+
 .top {
   @extend %flex-wrap;
   gap: var(--gap-xxl);
