--- a/src/components/footer/components/footer-type-4/footer-type-4.module.scss
+++ b/src/components/footer/components/footer-type-4/footer-type-4.module.scss
@@ -73,9 +73,19 @@
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   max-width: 100%;
-  nav span,
+
   ul li a {
     color: var(--dark);
+
+    transition:
+      opacity 0.3s ease,
+      border-color 0.3s ease;
+    border-bottom: 1px solid transparent;
+
+    &:hover {
+      opacity: 0.8;
+      border-color: var(--dark);
+    }
   }
 
   @include media-down($tablet-width) {
