--- a/src/components/footer/components/footer-type-5/footer-type-5.module.scss
+++ b/src/components/footer/components/footer-type-5/footer-type-5.module.scss
@@ -83,6 +83,22 @@
   max-width: fit-content;
 }
 
+.main_menu {
+  ul li a {
+    color: var(--white);
+
+    transition:
+      opacity 0.3s ease,
+      border-color 0.3s ease;
+    border-bottom: 1px solid transparent;
+
+    &:hover {
+      opacity: 0.8;
+      border-color: var(--white);
+    }
+  }
+}
+
 .contact span {
   font-weight: var(--fw-sb);
 }
