--- a/src/components/footer/components/footer-type-7/footer-type-7.module.scss
+++ b/src/components/footer/components/footer-type-7/footer-type-7.module.scss
@@ -88,6 +88,20 @@
 .main_menu {
   flex: auto;
   max-width: fit-content;
+
+  ul li a {
+    color: var(--white);
+
+    transition:
+      opacity 0.3s ease,
+      border-color 0.3s ease;
+    border-bottom: 1px solid transparent;
+
+    &:hover {
+      opacity: 0.8;
+      border-color: var(--white);
+    }
+  }
 }
 
 .social {
