--- a/src/shared/components/content-block/content-block.module.scss
+++ b/src/shared/components/content-block/content-block.module.scss
@@ -5,7 +5,8 @@
   gap: var(--gap-lg);
 
   img {
-    width: 100%;
+    width: fit-content;
+    max-width: 100%;
     height: auto;
     object-fit: contain;
     object-position: left;
