--- a/src/components/news/components/news-type-2/news-type-2.module.scss
+++ b/src/components/news/components/news-type-2/news-type-2.module.scss
@@ -24,6 +24,7 @@
     background-color: transparent;
     border: 1px solid transparent;
     font-size: var(--fs-sm);
+    border-radius: 0;
     transition:
       background-color var(--slow-transition),
       color var(--slow-transition);
