--- a/src/shared/components/headerComponent/components/header-type-5/header-type-5.module.scss
+++ b/src/shared/components/headerComponent/components/header-type-5/header-type-5.module.scss
@@ -3,14 +3,13 @@
 
 .root {
   background-color: var(--white);
-  transition: transform 0.3s ease-in-out;
+  transition: top 0.4s ease-in-out;
 }
 
 .sticky {
   position: sticky;
   top: 0;
-  transform: translateY(0px);
-  transition: transform 0.3s ease-in-out;
+  animation: fadeIn 0.4s ease-in-out;
 }
 
 .header {
@@ -51,5 +50,14 @@
       gap: 8px;
       color: var(--dark);
     }
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    transform: translateY(-100%);
+  }
+  to {
+    transform: translateY(0);
   }
 }
