--- a/src/shared/components/headerComponent/components/header-type-6/header-type-6.module.scss
+++ b/src/shared/components/headerComponent/components/header-type-6/header-type-6.module.scss
@@ -3,14 +3,13 @@
 
 .root {
   background-color: var(--white);
-  transition: transform 0.3s ease-in-out;
+  transition: top 0.4s ease-in-out;
 }
 
 .sticky {
   position: sticky;
   top: 0;
-  transform: translateY(0px);
-  transition: transform 0.3s ease-in-out;
+  animation: fadeIn 0.4s ease-in-out;
 }
 
 .header {
@@ -55,5 +54,14 @@
     button {
       text-wrap: nowrap;
     }
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    transform: translateY(-100%);
+  }
+  to {
+    transform: translateY(0);
   }
 }
