--- a/src/components/about/components/about-type-1/about-type-1.module.scss
+++ b/src/components/about/components/about-type-1/about-type-1.module.scss
@@ -2,6 +2,10 @@
 @import '../../../../shared/styles/mixins.scss';
 
 .grid_layout {
+  grid-template-columns: repeat(2, 1fr);
+  @include container-down('root', $tablet-width) {
+    grid-template-columns: 1fr;
+  }
   &_item {
     img {
       border-radius: 20px;
