--- a/src/components/about/components/about-type-6/about-type-6.module.scss
+++ b/src/components/about/components/about-type-6/about-type-6.module.scss
@@ -2,6 +2,11 @@
 @import '../../../../shared/styles/mixins.scss';
 
 .grid_layout {
+  grid-template-columns: repeat(2, 1fr);
+  @include container-down('root', $tablet-width) {
+    grid-template-columns: 1fr;
+  }
+
   &_item {
     &:first-child {
       @include container-down('root', $tablet-width) {
