--- a/src/components/hero/components/hero-type-2/hero-type-2.module.scss
+++ b/src/components/hero/components/hero-type-2/hero-type-2.module.scss
@@ -217,6 +217,12 @@
   }
 }
 
+@media (max-width: 500px) {
+  .tab {
+    display: none;
+  }
+}
+
 @media (max-width: 350px) {
   .tab {
     &_list {
