--- a/src/components/hero/components/hero-type-1/hero-type-1.module.scss
+++ b/src/components/hero/components/hero-type-1/hero-type-1.module.scss
@@ -200,6 +200,12 @@
   }
 }
 
+@media (max-width: 500px) {
+  .tab {
+    display: none;
+  }
+}
+
 @media (max-width: 350px) {
   .tab {
     &_list {
