--- a/src/components/hero/components/hero-type-3/hero-type-3.module.scss
+++ b/src/components/hero/components/hero-type-3/hero-type-3.module.scss
@@ -194,6 +194,12 @@
   }
 }
 
+@media (max-width: 500px) {
+  .tab {
+    display: none;
+  }
+}
+
 @media (max-width: 350px) {
   .tab {
     &_list {
