--- a/src/components/hero/components/hero-type-5/hero-type-5.module.scss
+++ b/src/components/hero/components/hero-type-5/hero-type-5.module.scss
@@ -64,7 +64,7 @@
       cursor: pointer;
       padding: 16px 24px;
       border-radius: 5px;
-      color: var(--gray);
+      color: var(--black);
       font-size: var(--fs-sm);
       flex: 1;
       transition:
