--- a/src/components/hero/components/hero-type-1/hero-type-1.module.scss
+++ b/src/components/hero/components/hero-type-1/hero-type-1.module.scss
@@ -65,7 +65,7 @@
       cursor: pointer;
       padding: 16px 24px;
       border-radius: 8px;
-      color: var(--gray);
+      color: var(--black);
       font-size: var(--fs-sm);
       transition:
         color 0.2s ease-in-out,
