--- a/src/components/hero/components/hero-type-2/hero-type-2.module.scss
+++ b/src/components/hero/components/hero-type-2/hero-type-2.module.scss
@@ -75,7 +75,7 @@
       margin: 0;
       cursor: pointer;
       padding: 16px 24px;
-      color: var(--gray);
+      color: var(--black);
       font-size: var(--fs-sm);
       border-radius: 0;
       transition:
