--- a/src/components/hero/components/hero-type-3/hero-type-3.module.scss
+++ b/src/components/hero/components/hero-type-3/hero-type-3.module.scss
@@ -70,7 +70,7 @@
       cursor: pointer;
       padding: 16px 24px;
       border-radius: 5px;
-      color: var(--gray);
+      color: var(--black);
       font-size: var(--fs-sm);
       transition:
         color 0.2s ease-in-out,
