--- a/src/components/hero/components/hero-type-7/hero-type-7.module.scss
+++ b/src/components/hero/components/hero-type-7/hero-type-7.module.scss
@@ -76,7 +76,7 @@
       margin: 0;
       cursor: pointer;
       padding: 16px 24px;
-      color: var(--gray);
+      color: var(--black);
       font-size: var(--fs-sm);
       border-radius: 10px;
       background-color: #fff;
