--- a/src/shared/components/select-tab/select-tab-type-3/select-tab-type-3.module.scss
+++ b/src/shared/components/select-tab/select-tab-type-3/select-tab-type-3.module.scss
@@ -6,7 +6,7 @@
 }
 
 .select_button {
-  color: var(--primary);
+  color: var(--black);
   border-radius: 5px;
   line-height: 48px;
   height: 48px;
