--- a/src/shared/ui/hero-ui.module.scss
+++ b/src/shared/ui/hero-ui.module.scss
@@ -1,7 +1,7 @@
 .input {
   padding-block: 0;
   border-radius: 0;
-  color: var(--gray);
+  color: var(--black);
   outline: none;
   line-height: 48px;
   height: 48px;
@@ -12,6 +12,10 @@
   font-size: 16px;
   white-space: nowrap;
   text-overflow: ellipsis;
+
+  &::placeholder {
+    color: var(--black);
+  }
 }
 
 .radius {
@@ -46,10 +50,6 @@
       border-radius: 30px;
     }
   }
-}
-
-.test {
-  background-color: red;
 }
 
 .dropdown {
@@ -113,6 +113,12 @@
   flex-wrap: nowrap;
   overflow: hidden;
   max-width: 150px;
+
+  input {
+    &::placeholder {
+      color: var(--black);
+    }
+  }
 }
 
 .classNameInput {
