--- a/src/components/advantages/components/advantages-type-6/advantages-type-6.module.scss
+++ b/src/components/advantages/components/advantages-type-6/advantages-type-6.module.scss
@@ -37,9 +37,10 @@
 }
 
 .list {
-  @include container-down('root', $mobile-width) {
-    grid-template-columns: 1fr;
-  }
+  grid-template-columns: repeat(2, 1fr);
+  // @include container-down('root', $mobile-width) {
+  //   grid-template-columns: 1fr;
+  // }
 
   &_item {
     .base_subtitle {
