--- a/src/components/news/components/news-type-8/news-type-8.module.scss
+++ b/src/components/news/components/news-type-8/news-type-8.module.scss
@@ -45,7 +45,7 @@
   grid-template-columns: repeat(2, 1fr);
   gap: var(--gap-md) var(--gap-lg);
 
-  @include container-down('root', $tablet-width) {
+  @include container-down('root', $laptop-width) {
     grid-template-columns: 1fr;
   }
 
@@ -56,7 +56,7 @@
 
   &_item_content {
     display: grid;
-    grid-template-columns: 3fr 5fr;
+    grid-template-columns: auto auto;
     gap: 20px;
 
     @include container-down('list-item', 440px) {
@@ -66,6 +66,7 @@
     & > img {
       aspect-ratio: 1/1;
       object-fit: cover;
+      max-height: 180px;
 
       @include container-down('list-item', 440px) {
         aspect-ratio: 3/2;
