--- a/src/components/news/components/news-type-8/news-type-8.module.scss
+++ b/src/components/news/components/news-type-8/news-type-8.module.scss
@@ -56,10 +56,10 @@
 
   &_item_content {
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: 180px auto;
     gap: 20px;
 
-    @include container-down('list-item', 440px) {
+    @include container-down('list-item', 460px) {
       grid-template-columns: 1fr;
     }
 
@@ -68,7 +68,7 @@
       object-fit: cover;
       max-height: 180px;
 
-      @include container-down('list-item', 440px) {
+      @include container-down('list-item', 460px) {
         aspect-ratio: 3/2;
         max-width: 100%;
         max-height: 200px;
