--- a/src/components/footer/components/footer-type-6/footer-type-6.module.scss
+++ b/src/components/footer/components/footer-type-6/footer-type-6.module.scss
@@ -70,7 +70,7 @@
     justify-content: center;
   }
   ul {
-    gap: var(--gap-xxl);
+    column-gap: 90px;
 
     @include media-down($mobile-width) {
       gap: var(--gap-sm);
