--- a/src/components/hero/components/hero-type-2/hero-type-2.module.scss
+++ b/src/components/hero/components/hero-type-2/hero-type-2.module.scss
@@ -65,7 +65,7 @@
     align-items: center;
     background-color: #fff;
     width: fit-content;
-    border: 1px solid var(--primary);
+    border: 1px solid #6b7280;
     margin: -1px;
 
     button {
