--- a/src/components/hero/components/hero-type-7/hero-type-7.module.scss
+++ b/src/components/hero/components/hero-type-7/hero-type-7.module.scss
@@ -50,6 +50,7 @@
     font-size: clamp(24px, 5vw, 56px);
     color: #fff;
     margin: 0;
+    text-align: center;
   }
 
   p {
@@ -66,7 +67,7 @@
   &_list {
     display: flex;
     align-items: center;
-    width: fit-content;
+    width: 100%;
     gap: 16px;
 
     button {
@@ -81,6 +82,8 @@
       border-radius: 10px;
       background-color: #fff;
       border: 1px solid var(--primary);
+      max-width: 180px;
+      width: 100%;
       transition:
         color 0.2s ease-in-out,
         background-color 0.2s ease-in-out;
@@ -135,6 +138,14 @@
       &::after {
         border-radius: 0;
       }
+    }
+  }
+}
+
+@media (min-width: 1280px) {
+  .tab {
+    &_list {
+      justify-content: center;
     }
   }
 }
