--- a/src/components/yandex-map/components/toggle-items/toggle-sidebar.module.scss
+++ b/src/components/yandex-map/components/toggle-items/toggle-sidebar.module.scss
@@ -2,5 +2,29 @@
 @import '../../../../shared/styles/mixins.scss';
 
 .root {
-  // position: absolute;
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  background-color: #fff;
+  z-index: 10;
+  max-width: 384px;
+  width: 100%;
+  padding: 16px;
+}
+
+.items {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.item {
+  border: 1px solid #d1d5db;
+
+  img {
+    width: 100%;
+    object-fit: contain;
+    aspect-ratio: 1;
+  }
 }
