--- a/src/components/yandex-map/components/toggle-items/toggle-sidebar.module.scss
+++ b/src/components/yandex-map/components/toggle-items/toggle-sidebar.module.scss
@@ -2,21 +2,26 @@
 @import '../../../../shared/styles/mixins.scss';
 
 .root {
-  position: absolute;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  background-color: #fff;
-  z-index: 10;
   max-width: 384px;
   width: 100%;
-  padding: 16px;
+  position: relative;
 }
 
 .items {
+  max-width: 384px;
   display: flex;
   flex-direction: column;
   gap: 16px;
+  position: fixed;
+  left: 0;
+  top: 155px;
+  bottom: 0;
+  background-color: #fff;
+  z-index: 10;
+  width: 100%;
+  padding: 16px;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .item {
@@ -27,4 +32,60 @@
     object-fit: contain;
     aspect-ratio: 1;
   }
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  padding: 16px;
+}
+
+.badges {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.chars {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  list-style-type: none;
+
+  li {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 10px;
+
+    span:first-child {
+      color: #6b7280;
+    }
+  }
+}
+
+.price {
+  color: var(--primary);
+}
+
+.close {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+  border: 1px solid var(--primary);
+  color: var(--primary);
+  top: 10px;
+  right: -50px;
+  background-color: #fff;
+  z-index: 10;
+  cursor: pointer;
+}
+
+.open {
+  display: none;
 }
