--- a/src/components/yandex-map/components/toggle-items/toggle-sidebar.module.scss
+++ b/src/components/yandex-map/components/toggle-items/toggle-sidebar.module.scss
@@ -38,6 +38,10 @@
   overflow-x: hidden;
   transition: transform 0.3s ease-in-out;
   background-color: #fff;
+
+  @include media-down($mobile-width) {
+    padding: 0;
+  }
 }
 
 .item {
@@ -47,6 +51,10 @@
     width: 100%;
     object-fit: contain;
     aspect-ratio: 1;
+  }
+
+  @include media-down($mobile-width) {
+    border: none;
   }
 }
 
@@ -100,6 +108,12 @@
   background-color: #fff;
   z-index: 10;
   cursor: pointer;
+
+  svg {
+    fill: var(--primary);
+    width: 24px;
+    height: 24px;
+  }
 }
 
 .open {
