--- a/src/components/yandex-map/yandex-map.module.scss
+++ b/src/components/yandex-map/yandex-map.module.scss
@@ -10,3 +10,16 @@
   width: 100%;
   height: 100dvh;
 }
+
+.zoom-btns {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.zoom-btn {
+  width: 40px;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid red;
+}
