--- a/src/shared/styles/template.scss
+++ b/src/shared/styles/template.scss
@@ -253,3 +253,24 @@ a {
   font-size: 16px;
   cursor: pointer;
 }
+
+.zoom-btns {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.zoom-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  border: 1px solid var(--primary);
+  background-color: var(--white);
+  cursor: pointer;
+
+  svg {
+    fill: var(--primary);
+  }
+}
