--- a/src/shared/components/filter/filter.module.scss
+++ b/src/shared/components/filter/filter.module.scss
@@ -183,3 +183,16 @@
   justify-content: space-between;
   cursor: pointer;
 }
+
+.selects {
+  display: flex;
+  flex-direction: column;
+  padding: var(--gap-sm);
+  gap: var(--gap-sm);
+}
+
+.multi_input {
+  div {
+    max-width: 100%;
+  }
+}
